# USV

lcm_test/: LCM_Client.cpp  LCM_Server.cpp  README.md
navsatsignalparser/: README.md
navsatsignalparser/src/unionstrong_driver/unionstrong_msgs/: CMakeLists.txt  package.xml
navsatsignalparser/src/unionstrong_driver/unionstrong_msgs/msg/: GPFPD.msg
send_gps/: CMakeLists.txt  package.xml  send_gps.cpp
sim/sim_boat/: readme.md  sim_boat.cpp
sim_boat/: CMakeLists.txt  package.xml  sim_boat.cpp
src/: collectMsg.py  ctrl_v.py  getVH_sendVH.py  lat.py  moveToPose.py  pub_heading.py  pub_velocity.py  send.py  sub_heading.py  test.py  testV.py
sys_sim/: CMakeLists.txt  Task_Maker(testcontrol).cpp  Task_Maker.cpp  cloud_processor.cpp  controlLayer_sim.cpp  data_fusion.cpp  example.lcm  lcm_receive.cpp  lcm_send.cpp  package.xml  photo_processor.cpp  sensorLayer.cpp  sys_sim.cpp  sys_sim.h  taskLayer_sim.cpp  visualize.py
sys_sim/launch/: sys_sim.launch
sys_sim/msg/: boatObstacle.msg  globalObstacle.msg  localObstacle.msg  photo_trans.msg  radar_trans.msg  targetPoint.msg  usv.msg
sys_sim/sim/: example.hpp
track/: 1.4.2.cpp  CMakeLists.txt  lat.py  package.xml  pypcl.py  readme.md  track.cpp  track.csv  track1.1.cpp  track1.2.1.cpp  track1.2.2.cpp  track1.3.cpp  track1.4.1.cpp  track1.4.cpp
track/track/: track_circle_all.csv
track/track/1.0_角度控制/: readme.txt  track.cpp  track1.0.cpp
track/track/1.1_循迹/: readme.txt  track.cpp  track.csv
track/track/1.2stanley/: readme.md  track1.2.0.cpp  track1.2.0.csv  track1.2.1.cpp  (+2 more)
vis/: lat.py  readme.md
(+12 files in other folders)
