<?xml version="1.0"?>
<package>
  <name>unionstrong_msgs</name>
  <version>1.0.0</version>
  <description>ROS messages which represent raw unionstrong SPAN data.</description>

  <maintainer email="liby@mail2.sysu.edu.cn">LiBoyang</maintainer>

  <author email="liby@mail2.sysu.edu.cn">USI</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
